# sigmod-contest-2018

./: .gitignore  CMakeLists.txt  README.md  compile.sh  package.sh  run.sh
data/small_workload/: allRelations.sql  pg13loader.sh  r0.tbl  r1.tbl  r10.tbl  r11.tbl  r12.tbl  r13.tbl  r2.tbl  r3.tbl  r4.tbl  r5.tbl  r6.tbl  r7.tbl  r8.tbl  r9.tbl  small.custom.work
docker/: Dockerfile  Dockerfile.minimal  Dockerfile.original  Makefile
include/: DataEngine.hpp  Executor.hpp  Histogram.hpp  Index.hpp  Joiner.hpp  Mixins.hpp  Parallel.hpp  Parser.hpp  Plan.hpp  Planner.hpp  Relation.hpp  Utils.hpp
src/: CMakeLists.txt  DataEngine.cpp  Executor.cpp  Histogram.cpp  Index.cpp  Joiner.cpp  Parallel.cpp  Parser.cpp  Plan.cpp  Planner.cpp  Query2SQL.cpp  Relation.cpp  Utils.cpp  main.cpp
submission/: CMakeLists.txt  DataEngine.cpp  Executor.cpp  Histogram.cpp  Index.cpp  Parallel.cpp  Parser.cpp  Plan.cpp  Planner.cpp  Query2SQL.cpp  Relation.cpp  Utils.cpp
test/: TestRelation.cpp
